--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon --exec tsx server.ts",
+    "dev": "tsx watch server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,11 @@
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0",
     "ws": "^8.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.6",
+    "@types/ws": "^8.18.1",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
